# agentic-rag-notes-parser

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: config.py  db.py  main.py  models.py  schemas.py
backend/app/generation/: chat_service.py  prompts.py
backend/app/ingestion/: chunker.py  convert.py  embedder.py  parse.py  pipeline.py
backend/app/providers/: anthropic_provider.py  base.py  factory.py  openai_provider.py
backend/app/retrieval/: fusion.py  lexical.py  rerank.py  service.py  vector.py
backend/app/routers/: chat.py  chunks.py  courses.py  coverage.py  debug.py  documents.py
backend/tests/: conftest.py  test_models.py
backend/tests/fixtures/: sample.docx
backend/tests/generation/: test_chat_service.py
backend/tests/ingestion/: test_chunker.py  test_convert.py  test_embedder.py  test_parse.py  test_pipeline.py
backend/tests/providers/: test_openai_provider.py  test_providers.py
backend/tests/retrieval/: test_lexical_vector_fusion.py  test_rerank_service.py
backend/tests/routers/: test_chat.py  test_chunks.py  test_courses.py  test_coverage.py  test_documents.py
docs/superpowers/plans/: 2026-07-04-study-notes-parser-phase1.md  2026-07-20-course-coverage-endpoint.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css
scripts/: make_fixtures.py
(+31 files in other folders)
