[project]
name = "notes-parser-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "alembic>=1.13",
    "pydantic-settings>=2.4",
    "pgvector>=0.3",
    "pymupdf>=1.24",
    "python-pptx>=1.0",
    "python-docx>=1.1",
    "sentence-transformers>=3.0",
    "transformers>=4.44",
    "anthropic>=0.34",
    "openai>=1.40",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "pytest-cov>=5.0", "httpx>=0.27"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
